--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,15 @@
 /config/credentials.yml.enc
 /config/database.yml
 /config/storage.yml
+
+/public/packs
+/public/packs-test
+/node_modules
+/yarn-error.log
+yarn-debug.log*
+.yarn-integrity
+
+config/settings.local.yml
+config/settings/*.local.yml
+config/environments/*.local.yml
+config/database.yml
