--- a/config/settings/development.yml
+++ b/config/settings/development.yml
@@ -7,3 +7,11 @@ links:
   rails_book: "https://www.railstutorial.org/book"
   rails_news: "https://news.railstutorial.org/"
   rails_author: "https://www.michaelhartl.com/"
+
+regex:
+  email: !ruby/regexp '/\A[\w+\-.]+@[a-z\d\-.]+\.[a-z]+\z/'
+
+length:
+  password_min_length: 6
+  name_max_length: 50
+  email_max_length: 255
