--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,6 @@ config/settings.local.yml
 config/settings/*.local.yml
 config/environments/*.local.yml
 config/database.yml
+
+# Ignore application configuration
+/config/application.yml
